fixed header visibility & styles

--- a/src/app/features/dashboard/home/home.component.scss
+++ b/src/app/features/dashboard/home/home.component.scss
@@ -63,7 +63,7 @@ app-hero-banner {
       transform-origin: center center;
       position: relative;
       background: linear-gradient(to left, white 50%, #808080 50%);
-      background-size: 200% 100%;
+      background-size: 204% 103%;
       background-position: right bottom;
       color: $backgroundDarc;
       text-decoration: none;
