--- a/src/app/shared/components/header/header-desktop/header-desktop.component.scss
+++ b/src/app/shared/components/header/header-desktop/header-desktop.component.scss
@@ -25,7 +25,7 @@ h2 {
 .gender-link {
   position: relative;
   background: linear-gradient(to left, transparent 50%, $textColorLight 50%);
-  background-size: 200% 100%;
+  background-size: 204% 103%;
   background-position: right bottom;
   text-decoration: none;
   padding: 0 toRem(5);
@@ -45,7 +45,7 @@ h2 {
 .scrolled .gender-link {
   position: relative;
       background: linear-gradient(to left, transparent 50%, $textColorDark 50%);
-      background-size: 200% 100%;
+      background-size: 204% 103%;
       background-position: right bottom;
       text-decoration: none;
       padding: 0 toRem(5);
